# screamshot

./: Cargo.toml  LICENSE  README.md  RELEASE_GUIDE.md  install.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
scratch/: editor_patch12.py  editor_patch6.py
src/: main.rs
