[package]
name = "screamshot"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
chrono = "0.4.44"
eframe = "0.34.2"
egui = "0.34.2"
enigo = { version = "0.6.1", features = ["wayland"] }
image = "0.25.10"
notify-rust = "4.17.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tray-icon = "0.24.0"
xcap = { version = "0.9.4", features = ["image"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
